Added correct name of DB.

--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "CatalogsDb",
+    "DatabaseName": "CatalogDb",
     "CollectionName": "Products"
   },
   "Logging": {
